--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "Kauê Ronald & Bruno Dutra",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.7",
     "mongoose": "^6.5.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "path": "^0.12.7"
   }
 }
